Fixed pages gap issue

--- a/Historien/samples/double-page/css/double-page.css
+++ b/Historien/samples/double-page/css/double-page.css
@@ -70,7 +70,7 @@ body{
 }
 
 .flipbook-viewport .double{
-	width:1200px;
+	width:1190px;
 	height:650px;
 	background-size:100% 100%;
 }
